# positron

./: README.md
cll-demo/: README.md  app.py  forklaring_train_models.md  generate_cohort.py  koer_projekt.txt  main.py  pipeline_app.py  pyproject.toml  train_models.py
ml_model_training_exercise/: README.md  mlflow.db  requirements.txt
ml_model_training_exercise/mlruns/0/: meta.yaml
ml_model_training_exercise/mlruns/446682956478146349/: meta.yaml
ml_model_training_exercise/mlruns/446682956478146349/56ff9feeee414048a07c2541ee5716bb/: meta.yaml
ml_model_training_exercise/mlruns/446682956478146349/56ff9feeee414048a07c2541ee5716bb/metrics/: accuracy
ml_model_training_exercise/mlruns/446682956478146349/56ff9feeee414048a07c2541ee5716bb/outputs/m-1344f04022b24fb1b29b848f22939918/: meta.yaml
ml_model_training_exercise/mlruns/446682956478146349/b161d7c07db94e0190656b46358093a3/: meta.yaml
ml_model_training_exercise/mlruns/446682956478146349/b161d7c07db94e0190656b46358093a3/metrics/: accuracy
ml_model_training_exercise/mlruns/446682956478146349/b161d7c07db94e0190656b46358093a3/outputs/m-3bdfa2be9ec344228cb4777697321677/: meta.yaml
ml_model_training_exercise/mlruns/446682956478146349/models/m-1344f04022b24fb1b29b848f22939918/: meta.yaml
ml_model_training_exercise/mlruns/446682956478146349/models/m-3bdfa2be9ec344228cb4777697321677/: meta.yaml
ml_model_training_exercise/src/config/: settings.py
ml_model_training_exercise/src/data/: loader.py
ml_model_training_exercise/src/models/: train.py
(+7 files in other folders)
