[project]
name = "cll-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
]
